[tool.poetry]
name = "knowledge-graphs"
version = "0.1.0"
description = ""
authors = ["fouad-alef <fouad.shammary@alefeducation.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.6.0"
nltk = "^3.8.1"
textacy = "^0.13.0"
networkx = "^3.0"
dateparser = "^1.1.7"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
gensim = "^4.3.1"
wikipedia = "^1.4.0"
graphviz = "^0.20.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.1.1"
black = "^23.1.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
